[package]
name = "darmok_lox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main
clap = { version = "3.0.0-rc.5", features = ["derive"] }
anyhow = "1.0.51"
rustyline = "9.1.1"

# Library
thiserror = "1.0.30"
regex = "1.5.4"
phf = { version = "0.10", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.0.0"
